Use Java GraalVM 21